# rbb-sample-simulation

./: README.md
src/outputs_a_sine/: CMakeLists.txt  package.xml  test_record.py
src/outputs_a_sine/launch/: launch_and_record.launch
src/outputs_a_sine/src/: sine_wave.cpp
